--- a/main.css
+++ b/main.css
@@ -63,7 +63,7 @@ header {
     border: 5px black solid;
     padding: 2.5em 0 0.5em;
     margin: 0 0 2.0em;
-    background: white# /*url(img/bg_cheeses_lg_2600w.jpg)*/center 0px;
+    background: white /*url(img/bg_cheeses_lg_2600w.jpg)*/center 0px;
 }
 header h1 {
     font-family: 'Times New Roman', Times, serif;
@@ -158,7 +158,7 @@ section#sidebar {
 }
 section #main {
     border: 5px black solid;
-    background-color: rgba(252,251,243,0.7);
+    background-color: white;
     margin: 0 0 2.0em;
     padding: 1.5em 0 2.0em 1.5em;
     display: inline-block;
